# blog-marketplace

./: .coverage  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: CI.yml  test.yml
alembic/: env.py
alembic/versions/: 1234abcd5678_add_role_to_users.py  5d0b46d86d3f_initial_schema.py
src/: __init__.py
src/api/v1/: articles.py  auth.py  categories.py  decorators.py  uploads.py
src/app/: exceptions.py  main.py
src/application/ports/: repositories.py  uow.py
src/auth/: dependencies.py  jwt.py  password.py  roles.py  schemas.py
src/domain/: models.py
src/infrastructure/: __init__.py  celery_app.py  db.py  di.py  logging.py  orm.py
src/infrastructure/repositories/: sqlalchemy.py
src/infrastructure/uow/: sqlalchemy.py
src/middleware/: auth.py  error_handler.py  role_guard.py
src/schemas/: __init__.py  article.py  category.py  user.py
src/scripts/: init_s3.py
src/settings/: __init__.py  base.py
src/tasks/: email.py  maintenance.py  worker.py
src/tests/: conftest.py  test_api_artiles.py  test_api_auth.py  test_celery_tasks.py  test_repo_uow.py  test_s3_init.py  test_settings.py  test_smoke.py  test_sql_repo.py
src/utils/: email.py  s3.py
