[tool.poetry]
name = "blog-marketplace"
version = "0.1.0"
description = "Marketplace for blog posts"
authors = ["Pestov Roman <pestov.roman.n@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = {extras = ["email"], version = "^2.6.4"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
