[tool.poetry]
name = "blog-marketplace"
version = "0.1.0"
description = "Marketplace for blog posts"
authors = ["Pestov Roman <pestov.roman.n@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["jwt"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.40"
asyncpg = "^0.29.0"
aio-pika = "^9.3.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = {extras = ["redis"], version = "^5.5.1"}
aiosmtplib = "^4.0.0"
boto3 = "^1.38.3"
botocore = "^1.38.3"
structlog = "^25.3.0"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pre-commit = "^3.6.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250328"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
extend-ignore = ["B008"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
allow_untyped_defs = true
follow_imports = "silent"
exclude = ["^src/tests/"]
